--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -12,8 +12,10 @@ html, body {
   height: 100%;
 }
 
-.menu .ui.container {
-  width: 100% !important;
+.ui.container {
+  @media (max-width: 766px) {
+    width: 100% !important;
+  }
 }
 
 #message-input {
@@ -54,7 +56,7 @@ html, body {
 }
 
 .camera-popup {
-  position:absolute;
+  position: absolute;
   top: 30px;
 }
 
