--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -12,7 +12,7 @@ html, body {
   height: 100%;
 }
 
-.ui.container {
+.menu .ui.container {
   @media (max-width: 766px) {
     width: 100% !important;
   }
