add user accounts packages hook up username with new message add login welcome message add hand style for login welcome message

--- a/client/templates/messageInput.html
+++ b/client/templates/messageInput.html
@@ -1,10 +1,16 @@
 <template name="messageInput">
 
-    <form id="message-input" action="">
-        <div class="ui fluid action input">
-            <input name="message" type="text" placeholder="Type your message"/>
-            <button class="ui button" type="submit">Send</button>
+    {{#if currentUser}}
+        <form id="message-input" action="">
+            <div class="ui fluid action input">
+                <input name="message" type="text" placeholder="Type your message"/>
+                <button class="ui button" type="submit">Send</button>
+            </div>
+        </form>
+    {{else}}
+        <div id="login-welcome" class="ui inverted blue center aligned segment">
+            Please sign in and join the conversation!
         </div>
-    </form>
+    {{/if}}
 
 </template>
