--- a/client/styles/styles.less
+++ b/client/styles/styles.less
@@ -25,6 +25,7 @@ html, body {
 
 #login-welcome {
   min-height: 3.5em;
+  cursor: pointer;
 }
 
 #messages {
@@ -48,7 +49,7 @@ html, body {
 
 #take-picture {
   right: 6em;
-  cursor: hand;
+  cursor: pointer;
 }
 
 #camera {
