add bluereef:camera package add button to take picture save picture with message display picture in chat

--- a/client/templates/messageInput.html
+++ b/client/templates/messageInput.html
@@ -2,8 +2,9 @@
 
     {{#if currentUser}}
         <form id="message-input" action="">
-            <div class="ui fluid action input">
+            <div class="ui fluid icon action input">
                 <input name="message" type="text" placeholder="Type your message"/>
+                <i id="take-picture" class="circular photo link icon"></i>
                 <button class="ui button" type="submit">Send</button>
             </div>
         </form>
@@ -12,5 +13,7 @@
             Please sign in and join the conversation!
         </div>
     {{/if}}
+
+    <canvas id="camera"></canvas>
 
 </template>
