--- a/client/templates/messagesList.html
+++ b/client/templates/messagesList.html
@@ -22,6 +22,10 @@
 
             <div class="text">
                 {{body}}
+
+                {{#if picture}}
+                    <img src="{{picture}}" alt=""/>
+                {{/if}}
             </div>
         </div>
     </div>
