sugar coating: improve formatting of date align your own chat messages on the right prevent auto-scrolling when user has moved the message list

--- a/client/templates/messagesList.html
+++ b/client/templates/messagesList.html
@@ -11,13 +11,13 @@
 
 <template name="message">
 
-    <div class="comment">
+    <div class="{{selfCommentClass}} comment">
         <div class="content">
 
             <span class="author">{{author}}</span>
 
             <div class="metadata">
-                <span class="date">{{createdAt}}</span>
+                <span class="date">{{formattedDate}}</span>
             </div>
 
             <div class="text">
